; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_tx.c_iwl_pcie_tfd_tb_get_len.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_tx.c_iwl_pcie_tfd_tb_get_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_tfd = type { %struct.iwl_tfd_tb* }
%struct.iwl_tfd_tb = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_tfd*, i64)* @iwl_pcie_tfd_tb_get_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwl_pcie_tfd_tb_get_len(%struct.iwl_tfd* %0, i64 %1) #0 {
  %3 = alloca %struct.iwl_tfd*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.iwl_tfd_tb*, align 8
  store %struct.iwl_tfd* %0, %struct.iwl_tfd** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.iwl_tfd*, %struct.iwl_tfd** %3, align 8
  %7 = getelementptr inbounds %struct.iwl_tfd, %struct.iwl_tfd* %6, i32 0, i32 0
  %8 = load %struct.iwl_tfd_tb*, %struct.iwl_tfd_tb** %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = getelementptr inbounds %struct.iwl_tfd_tb, %struct.iwl_tfd_tb* %8, i64 %9
  store %struct.iwl_tfd_tb* %10, %struct.iwl_tfd_tb** %5, align 8
  %11 = load %struct.iwl_tfd_tb*, %struct.iwl_tfd_tb** %5, align 8
  %12 = getelementptr inbounds %struct.iwl_tfd_tb, %struct.iwl_tfd_tb* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @le16_to_cpu(i32 %13)
  %15 = ashr i32 %14, 4
  ret i32 %15
}

declare dso_local i32 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
